other-vpol/require-storageclass/.kyverno-test-exceptions/partial-resource.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: badpvc-sibling
  namespace: default
spec:
  accessModes: [ReadWriteOnce]
  resources:
    requests:
      storage: 8Gi
