other-vpol/require-storageclass/.kyverno-test-exceptions/wrong-token-resource.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: wrong-token-pvc
  namespace: default
spec:
  accessModes: [ReadWriteOnce]
  resources:
    requests:
      storage: 8Gi
